--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -17,7 +17,6 @@
             </div>
         </div>
     </div>
-    {{!-- YOUR CIRCLE????? --}}
 
     {{!-- INFORMATION SECTION --}}
     <div class="info-container">
@@ -74,15 +73,15 @@
 
     <div class="metrics-container">
         <div class="metric">
-            <h4>87%</h4>
+            <h2>87%</h2>
             <p>of users say they find work more enjoyable.</p>
         </div>
         <div class="metric">
-            <h4>91%</h4>
+            <h2>91%</h2>
             <p>say their work relations have improved.</p>
         </div>
         <div class="metric">
-            <h4>82%</h4>
+            <h2>82%</h2>
             <p>feel more engaged with their team members.</p>
         </div>
     </div>
@@ -95,7 +94,7 @@
         </div>
         <div class="register-call">
             <p>Ready to bring your teams together?</p>
-            <a href="/signup-admin" class="form-btn">Register your company</a>
+            <a href="/register" class="form-btn">Register your company</a>
         </div>
     </div>
 
