--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -12,13 +12,13 @@
       <div class="medium-6 cell">
         <label for="company-team-signup" id="team-list">What is the name of a team at your company?
         </label>
-          <input type="text" placeholder="Team Name" class="form-input company-team-signup" required>
+        <input type="text" placeholder="Team Name" class="form-input company-team-signup" required>
       </div>
       <div class="signup-page-buttons card-section grid-x grid-padding-x align-center">
-      <div class="">
-      <button class="form-btn" id="company-signup-button">Finish Registering!</button>
-      <a href="" class="add-team-button form-link">Add a Team</a>
-      </div>
+        <div>
+          <button class="form-btn" id="company-signup-button">Finish Registering!</button>
+          <a href="" class="add-team-button form-link">Add a Team</a>
+        </div>
       </div>
     </div>
   </div>
