added in error messages and comment count in team dashboard

--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -15,6 +15,7 @@
         <input type="text" placeholder="Team Name" class="form-input company-team-signup" required>
       </div>
       <div class="signup-page-buttons card-section grid-x grid-padding-x align-center">
+<div id="message"></div>
         <div>
           <button class="form-btn" id="company-signup-button">Finish Registering!</button>
           <a href="" class="add-team-button form-link">Add a Team</a>
@@ -23,6 +24,5 @@
     </div>
   </div>
 </form>
-
 <script src="/js/adminSignUp.js"></script>
 <script src="/js/teamList.js"></script>
