--- a/views/teamDashboard.handlebars
+++ b/views/teamDashboard.handlebars
@@ -24,7 +24,7 @@
                     <div class="team-post-comments">
                         <div class="comment-container">
                             <div class="bar"></div>
-                            <a href="/posts/{{post_id}}" class="form-link">Comments</a>
+                            <a href="/posts/{{post_id}}" class="form-link">{{commentCount}} Comment(s)</a>
                         </div>
                     </div>
                 </div>
