added class to error message

--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -26,6 +26,7 @@
                         <h4 data-id={{postData.post_id}} id="post-id" class="comment-title"> Add your comment</h4>
                         <textarea type="text" placeholder="Enter comment here" class="form-input comment-input"
                             name="comment-input" required></textarea>
+                            <div class="error-message" id= "message"></div>
                         <a href="" class="form-btn form-link" id="submit-comment">Post comment</a>
                     </form>
                 </div>
