--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -15,7 +15,7 @@
         <input type="text" placeholder="Team Name" class="form-input company-team-signup" required>
       </div>
       <div class="signup-page-buttons card-section grid-x grid-padding-x align-center">
-<div id="message"></div>
+        <div class="error-message" id="message"></div>
         <div>
           <button class="form-btn" id="company-signup-button">Finish Registering!</button>
           <a href="" class="add-team-button form-link">Add a Team</a>
