--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -35,7 +35,7 @@
         </label>
       </div>
       <div class="signup-page-buttons card-section grid-x grid-padding-x align-center">
-      <div id="message"></div>
+      <div class = "error-message" id="message"></div>
       <button class="form-btn" id="signup-button">Signup!</button>
       <a href="/login" class="form-link">Already have an account? Log in here!</a>
       </div>
