--- a/views/companyMessage.handlebars
+++ b/views/companyMessage.handlebars
@@ -3,7 +3,7 @@
         <h2>Hello</h2>
         <p>Thank you for registering with TeamSpeak!</p>
         <br>
-        <p>Send your team this <a href="/signup">link</a> to sign up!</p>
+        <p>Send your team this <a class="form-link" href="/signup">link</a> to sign up!</p>
         <div class="top-bar"></div>
     </div>
 </div>
