Added alt text to images on landingpage and logout hbs

--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -5,7 +5,7 @@
         <div class="media-object stack-for-small">
             <div class="media-object-section">
                 <div class="landing-img">
-                    <img src="/images/heroImage-unsplash-mario-gogh.jpg" class="landing-img">
+                    <img src="/images/heroImage-unsplash-mario-gogh.jpg" class="landing-img" alt="Team sitting at a table in a conference room working together.">
                 </div>
             </div>
             <div class="sub-container">
@@ -30,7 +30,7 @@
             </div>
             <div class="media-object-section">
                 <div>
-                    <img src="/images/teamBuildingImage-unsplash-annie-spratt.jpg" class="info-img">
+                    <img src="/images/teamBuildingImage-unsplash-annie-spratt.jpg" class="info-img" alt="A team sitting at a table in a coffee shop working on a project.">
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
         <div class="media-object stack-for-small info-section">
             <div class="media-object-section">
                 <div>
-                    <img src="images/newsImage-unsplash-matthew-guay.jpg" class="info-img">
+                    <img src="images/newsImage-unsplash-matthew-guay.jpg" class="info-img" alt="Folded newspaper with a tablet on top, browsing the news.">
                 </div>
             </div>
             <div class="sub-container">
@@ -63,7 +63,7 @@
             </div>
             <div class="media-object-section">
                 <div class="">
-                    <img src="/images/connectedImage-unsplash-kevin-laminto.jpg" class="info-img">
+                    <img src="/images/connectedImage-unsplash-kevin-laminto.jpg" class="info-img" alt="Two girls leaning on a railing in a city, talking with their backs to the camera.">
                 </div>
             </div>
         </div>
