--- a/views/logout.handlebars
+++ b/views/logout.handlebars
@@ -6,7 +6,7 @@
             </div>
             <div class="logout-card-section grid-x grid-padding-x align-center">
                 <div class="img-container">
-                    <img class="logout-page-img" src="/images/logoutPage-unsplash-bacila-vlad.jpg">
+                    <img class="logout-page-img" src="/images/logoutPage-unsplash-bacila-vlad.jpg" alt="A black and white photo of a sad dog looking out of a window.">
                 </div>
                 <div class="logout-pg-text">
                     <h4>Sorry that you're leaving, but we know you'll be back.</h4>
